Basic demo of crazy error.

--- a/top/Cargo.toml
+++ b/top/Cargo.toml
@@ -4,5 +4,6 @@ version = "1.0.0"
 authors = ["Keith Amling <me@amling2.org>"]
 
 [dependencies]
+bottom = { path = "../bottom" }
 left = { path = "../left" }
 right = { path = "../right" }
